--- a/aster_light.html
+++ b/aster_light.html
@@ -293,7 +293,7 @@
             <h2 class="section-title">About Us</h2>
             <div class="about-content">
                 <p>
-                    Aster Light（アスターライト）は、インターネットを中心に活動する歌い手グループです。<br>
+                    Aster Light（アスタルライト）は、インターネットを中心に活動する歌い手グループです。<br>
                     星のような輝きと、心に響くハーモニーをお届けします。<br>
                     <br>
                     それぞれの個性が光るメンバーが集まり、<br>
@@ -334,3 +334,4 @@
     </footer>
 </body>
 </html>
+
