--- a/aster_light.html
+++ b/aster_light.html
@@ -230,20 +230,18 @@
 
         .member-card:hover {
             transform: translateY(-10px);
-            background: rgba(255, 255, 255, 0.1);
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 10px 20px rgba(14, 165, 233, 0.2);
         }
 
-        .member-icon {
-            width: 100px;
-            height: 100px;
-            background: #333;
+        .member-img {
+            width: 150px;
+            height: 150px;
             border-radius: 50%;
-            margin: 0 auto 1rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 2rem;
-            color: #555;
+            object-fit: cover;
+            margin-bottom: 1rem;
+            border: 4px solid var(--accent-color);
+            background-color: #fff;
         }
 
         /* Footer */
@@ -293,7 +291,7 @@
             <h2 class="section-title">About Us</h2>
             <div class="about-content">
                 <p>
-                    Aster Light（アスタルライト）は、インターネットを中心に活動する歌い手グループです。<br>
+                    Aster Light（アスターライト）は、インターネットを中心に活動する歌い手グループです。<br>
                     星のような輝きと、心に響くハーモニーをお届けします。<br>
                     <br>
                     それぞれの個性が光るメンバーが集まり、<br>
@@ -307,20 +305,24 @@
         <div class="container">
             <h2 class="section-title">Member</h2>
             <div class="members-grid">
-                <!-- メンバー情報が未定のためプレースホルダー -->
                 <div class="member-card">
-                    <div class="member-icon">★</div>
-                    <h3>Member 1</h3>
+                    <img src="aya.jpg" alt="Member 1" class="member-img">
+                    <h3>あや</h3>
                     <p>Vocal</p>
                 </div>
                 <div class="member-card">
-                    <div class="member-icon">★</div>
-                    <h3>Member 2</h3>
+                    <img src="pimeno.jpg" alt="Member 2" class="member-img">
+                    <h3>ぴめの</h3>
                     <p>Vocal</p>
                 </div>
                 <div class="member-card">
-                    <div class="member-icon">★</div>
-                    <h3>Member 3</h3>
+                    <img src="izuizu.jpg" alt="Member 3" class="member-img">
+                    <h3>和泉星雫</h3>
+                    <p>Vocal</p>
+                </div>
+                <div class="member-card">
+                    <img src="raiku.jpg" alt="Member 4" class="member-img">
+                    <h3>如月雷駆</h3>
                     <p>Vocal</p>
                 </div>
             </div>
@@ -334,4 +336,3 @@
     </footer>
 </body>
 </html>
-
